[metadata]
name = nifti-zarr
description = Nifti-Zarr conversion tools
long_description = file:README.md
author = Yael Balbastre
author_email = ybalbastre@mgh.harvard.edu

[options]
python_requires = >= 3.8
install_requires =
    zarr >= 3.0
    nibabel
    dask
    numpy
    numcodecs
    scikit-image

[options.extras_require]
http =
    fsspec[http]
test =
    pooch
    jsonschema

[options.entry_points]
console_scripts =
    nii2zarr = niizarr._nii2zarr:cli
    zarr2nii = niizarr._zarr2nii:cli
